# TenisFranz

./: .gitignore  LICENSE  README.md
.claude/: launch.json
.github/workflows/: ci.yml  historical_roi.yml  pipeline.yml  upcoming.yml
pipeline/: pyproject.toml
pipeline/docs/: data_sources.md
pipeline/src/tenisfranz/: __init__.py  backtest.py  bookies.py  calibration.py  config.py  draws_fetcher.py  export.py  guardrail.py  h2h.py  historical_roi.py  inference.py  ingest.py  ioc.py  name_overrides.py  name_resolver.py  odds_api.py  run_all.py  signals.py  stats.py  train.py  upcoming.py  wikidata.py
pipeline/src/tenisfranz/features/: __init__.py  age.py  assemble.py  elo_surface.py  fatigue.py  form.py  h2h_bayes.py  serve_return.py  tourney_weight.py
pipeline/tests/: test_assemble.py  test_bookies.py  test_calibration.py  test_draws_fetcher.py  test_elo_surface.py  test_guardrail.py  test_h2h.py  test_historical_roi.py  test_inference_parity.py  test_intra_tournament_order.py  test_name_resolver.py  test_upcoming.py
pipeline/tests/fixtures/: atp_draws_sample.json  inference_parity.json  wta_draws_sample.json
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/behind-the-scenes/: page.tsx
web/app/matches/: page.tsx
web/components/: BottomNav.tsx  Hint.tsx  PlayerAvatar.tsx  PlayerNavSearch.tsx  SiteFooter.tsx
web/lib/: data.ts  format.ts  predict.ts  seo.ts  types.ts
web/public/: CoList.html  llms.txt  manifest.webmanifest
(+33 files in other folders)
